imported images into local drive

--- a/timetracking/app/views/site/contact.html.erb
+++ b/timetracking/app/views/site/contact.html.erb
@@ -4,4 +4,4 @@
 
 <h2> abdul.kayyal@gmail.com </h2>
 
-<img src="https://45.media.tumblr.com/beee363b4cfaee7f847a9be09adf6f57/tumblr_nkii3jM6e11u2rd2ho1_500.gif">
+<img src="/assets/earthbound.gif">
