Added validations with New time entry for user

--- a/timetracking/app/views/time_entries/index.html.erb
+++ b/timetracking/app/views/time_entries/index.html.erb
@@ -5,7 +5,7 @@
 	<% @my_entries.each do |entry| %>
 		
 		<li>
-		<%= entry.hour %> h
+		<%= entry.hours %> h
 		<%= entry.minutes %> m -
 		<%= entry.date %>
 		</li>
